--- a/tutorial/create_enzymeml4nmrpy_v2.ipynb
+++ b/tutorial/create_enzymeml4nmrpy_v2.ipynb
@@ -387,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pe.write_enzymeml(doc=metadata, path=\"./pgm-eno.json\")"
+    "pe.write_enzymeml(doc=metadata, path=\"./data/pgm-eno.json\")"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata = pe.load_enzymeml(path=\"./pgm-eno.json\")\n",
+    "metadata = pe.load_enzymeml(path=\"./data/pgm-eno.json\")\n",
     "print_metadata(metadata)"
    ]
   },
