--- a/tutorial/enzymeml_workshop.ipynb
+++ b/tutorial/enzymeml_workshop.ipynb
@@ -408,12 +408,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "peaks = [5.52, 4.66, 3.8, 2.08, 1.14]\n",
-    "ranges = [[6,0.5]]\n",
+    "# peaks = [5.52, 4.66, 3.8, 2.08, 1.14]\n",
+    "# ranges = [[6,0.5]]\n",
     "\n",
-    "for fid in nmr.get_fids():\n",
-    "    fid.peaks = peaks\n",
-    "    fid.ranges = ranges"
+    "# for fid in nmr.get_fids():\n",
+    "#     fid.peaks = peaks\n",
+    "#     fid.ranges = ranges"
    ]
   },
   {
@@ -550,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"pgm-eno_with_concentrations.json\", \"w\") as f:\n",
+    "with open(\"./data/pgm-eno_with_concentrations.json\", \"w\") as f:\n",
     "    f.write(enzymeml_doc.model_dump_json(indent=4))"
    ]
   },
