--- a/tutorial/enzymeml_workshop.ipynb
+++ b/tutorial/enzymeml_workshop.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f0ffd38",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata = pe.load_enzymeml(path=\"./pgm-eno.json\")\n",
+    "metadata = pe.load_enzymeml(path=\"./data/pgm-eno.json\")\n",
     "print_metadata(metadata)"
    ]
   },
@@ -222,12 +222,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c7972a66",
    "metadata": {},
    "outputs": [],
    "source": [
     "nmr.parse_enzymeml_document(path_to_enzymeml_document=mc.selected)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "000a4d95",
+   "metadata": {},
+   "source": [
+    "We can inspect the EnzymeML document within NMRpy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dcadaa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nmr.enzymeml_document"
    ]
   },
   {
@@ -374,6 +392,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0dbe356b",
+   "metadata": {},
+   "source": [
+    "We can see how the data model changes with each processing step to reflect the current state:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0e433ef6-7941-4ab3-acea-99ae6b6bbb0f",
@@ -403,17 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "26e740bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# peaks = [5.52, 4.66, 3.8, 2.08, 1.14]\n",
-    "# ranges = [[6,0.5]]\n",
+    "peaks = [5.52, 4.66, 3.8, 2.08, 1.14]\n",
+    "ranges = [[6,0.5]]\n",
     "\n",
-    "# for fid in nmr.get_fids():\n",
-    "#     fid.peaks = peaks\n",
-    "#     fid.ranges = ranges"
+    "for fid in nmr.get_fids():\n",
+    "    fid.peaks = peaks\n",
+    "    fid.ranges = ranges"
    ]
   },
   {
@@ -545,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0a99708c",
    "metadata": {},
    "outputs": [],
